--- a/.github/workflows/run-notebook.yml
+++ b/.github/workflows/run-notebook.yml
@@ -1,1 +1,34 @@
+name: Run Placement Prediction Notebook
 
+on:
+  push:
+    branches:
+      - main
+  pull_request:
+    branches:
+      - main
+
+jobs:
+  execute-notebook:
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: Checkout repository
+      uses: actions/checkout@v3
+
+    - name: Set up Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: '3.11'
+
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt
+
+    - name: Install Jupyter tools
+      run: pip install nbconvert
+
+    - name: Execute notebook
+      run: |
+        jupyter nbconvert --to notebook --execute placement_prediction.ipynb --output result.ipynb
