--- a/.github/workflows/run-notebook.yml
+++ b/.github/workflows/run-notebook.yml
@@ -2,14 +2,12 @@ name: Run Placement Prediction Notebook
 
 on:
   push:
-    branches:
-      - main
+    branches: [main]
   pull_request:
-    branches:
-      - main
+    branches: [main]
 
 jobs:
-  execute-notebook:
+  run-notebook:
     runs-on: ubuntu-latest
 
     steps:
@@ -25,16 +23,18 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
+        pip install jupyter nbconvert
 
-    - name: Install Jupyter tools
-      run: pip install nbconvert
-
-    - name: Execute placement_prediction.ipynb
+    - name: Execute notebook
       run: |
-        jupyter nbconvert --to notebook --execute placement_prediction.ipynb --output result.ipynb
+        jupyter nbconvert placement_prediction.ipynb \
+          --to notebook \
+          --execute \
+          --output result.ipynb \
+          --ExecutePreprocessor.timeout=300
 
     - name: Upload executed notebook as artifact
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@v3.1.3
       with:
         name: executed-notebook
         path: result.ipynb
